--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 
+<html>
+  <title>
+  Ebonee Wacky Socks INC
+  </title>
+  
+  <body>
+   <h1> Mens, Womens, kids</h1>
+    </body>
+  
+  <style>
+    body {
+      background -color: blue;
+      color:#fff;
+      text-align:center;
+    }
+    </style>
+  
+  </html>
